Fix - removed unnecessary spacing while dragging

--- a/assets/css/scss/_admin.scss
+++ b/assets/css/scss/_admin.scss
@@ -536,16 +536,11 @@
 						font-size: 18px;
 
 						&.ui-draggable {
-							margin-bottom: 10px;
 							width: 100%;
 
 							.evf-icon {
 								display: inline-block;
 							}
-						}
-
-						&.ui-draggable-dragging {
-							margin-bottom: 10px;
 						}
 
 						.evf-icon {
